fix(block): display correct header spacing when heading or description are present

--- a/packages/calcite-components/src/components/block/block.scss
+++ b/packages/calcite-components/src/components/block/block.scss
@@ -23,7 +23,7 @@
   @apply justify-start;
 }
 
-.header-padding {
+.header--present {
   padding: var(--calcite-spacing-md);
 }
 
@@ -195,12 +195,6 @@ calcite-action-menu {
 
   .header .title .heading {
     @apply text-color-1;
-  }
-}
-
-:host([description]) {
-  .header {
-    padding: var(--calcite-spacing-md);
   }
 }
 
